crates/aranya-policy-compiler/tests/data/facts/bind_key_in_create_bad_argument.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: bad argument
  |
9 |             create F[i:?] => {s: "abc"}
  |                        ^ Cannot create fact with bind values
